# Quipu-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agente.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/agent/: graph.py  state.py
app/api/: dependencies.py
app/api/v1/: __init__.py  chat.py  clientes.py  health.py  inventario.py  productos.py  telegram_webhook.py  ventas.py  webhook.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/models/: __init__.py  cliente.py  inventario.py  producto.py  venta.py
app/repositories/: __init__.py  cliente_repository.py  conversation_repository.py  deuda_repository.py  inventario_repository.py  producto_repository.py  venta_repository.py
app/services/: __init__.py  cliente_service.py  inventario_service.py  media_service.py  message_processor.py  producto_service.py  redis_service.py  telegram_service.py  venta_service.py  whatsapp_service.py
app/tools/: alerta_stock_bajo.py  buscar_web.py  calcular_descuento.py  consultar_deudas.py  consultar_inventario.py  consultar_metricas.py  enviar_catalogo.py  exportar_reporte.py  festividades_proximas.py  generar_reporte_ventas.py  recomendacion_personalizada.py  registrar_cliente.py  registrar_compra_proveedor.py  registrar_deuda.py  registrar_venta.py
scripts/: check_models_v2.py  fix_stock.sql  list_models.py  list_models_final.py  migration_clothing.sql
scripts/sql/: schema.sql
scripts/verify/: verify_multimodal_webhook.py  verify_redis.py  verify_redis_mock.py
tests/: __init__.py  conftest.py  verify_media_service.py
tests/integration/: test_webhook_flow.py
tests/unit/: test_cliente_service.py  test_conversation_repository.py  test_inventario_service.py  test_message_processor.py  test_producto_service.py  test_telegram_service.py  test_telegram_webhook.py  test_tools_all.py  test_tools_consultar_inventario.py  test_tools_registrar_venta.py  test_venta_service.py  test_webhook.py  test_whatsapp_service.py
